# adgtk

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  README.rst  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
architecture/: components.md  data-flow.md  overview.md
architecture/decisions/: ADR-001-non-persistent-factory.md  ADR-002-yaml-blueprints.md  ADR-003-filesystem-tracking.md  ADR-004-pydantic-validation.md  ADR-005-module-level-observation-state.md  ADR-006-mcp-server.md  ADR-007-protocol-based-typing.md  ADR-008-bootstrap-pattern.md  ADR-009-unified-task-record.md  index.md
docs/: NO_GIT_build.txt  cli-reference.md  concepts.md  getting-started.md  index.md  mcp-server.md  tracking-results.md  web-interface.md
docs/advanced/: agent-writer.md  batch-jobs.md  bootstrap.md  custom-measurements.md  logging.md
docs/api/: data.md  experiment.md  factory.md  measurements.md  tracking.md
docs/old/: api.rst  factory.rst  factory_component.rst  factory_exception.rst
docs/source/: concept.rst  conf.py  index.rst  logging.rst  roadmap.rst
docs/user-guide/: building-experiments.md  creating-scenarios.md  studies.md
project_template/: README.md  requirements.txt
project_template/agent/: __init__.py  generation.py
project_template/environment/: __init__.py  basic.py  fixed.py
project_template/generation/: __init__.py  base.py
project_template/instrumentation/: __init__.py  comparisons.py  measurements.py
project_template/models/: base.py
project_template/plugin/: __init__.py  demo.py
project_template/policy/: __init__.py  fixed.py  generation.py  random.py
project_template/processing/: __init__.py  csv.py  processing.py
project_template/reward/: __init__.py  base.py  simple.py  structure.py
project_template/scenario/: __init__.py  dataset.py  generation.py  sample.py
project_template/structure/: __init__.py
project_template/templates/: preview.jinja  report.jinja  settings.jinja
src/adgtk/: __init__.py  clean.tar  template.tar
src/adgtk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
test/: settings.toml
test/api/: test_auth.py  test_config.py  test_server.py
test/cli/: test_exp_cli.py  test_project_cli.py
test/common/: test_structure.py
test/data/: test_tracking.py  test_utils.py
test/experiment/: test_builder.py  test_result.py  test_runner.py  test_runner_helpers.py  test_task.py  test_task_record.py
test/factory/: test_component_factory.py  test_tool_factory.py
test/impairment/: test_engine.py
test/journals/: test_experiment_journal.py  test_journal.py  test_metric_reporter.py
test/mcp_server/: test_server.py
test/measurement/: test_agent_writer.py  test_builtin.py  test_builtin_extended.py  test_engine.py  test_engine_extended.py
test/mockdata/: __init__.py  mock.py  scenario-settings.toml  test.experiment.1.toml
test/tracking/: test_base.py  test_manifest.py  test_manifest_notes.py  test_metric_tracker.py  test_observation_writer.py  (+4 more)
(+237 files in other folders)
