[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "adgtk"
version = "0.3.0b1"
authors = [{ name = "Fred Diehl", email = "fred@chaosbyderf.com" }]
description = "A framework for researching agentic systems."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "datasets",
  "toml",
  "jinja2",
  "PyYAML",
  "pandas",
  "regex",
  "requests",
  "anytree",
  "markdown",
  "matplotlib",
  "numpy",
  "prompt-toolkit",
  "pydantic",
  "docstring-parser",
  "mcp[cli]",
  "fastapi",
  "uvicorn[standard]",
  "python-multipart",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["adgtk*"]

[project.urls]
Homepage = "https://github.com/fred78108/adgtk"
Documentation = "https://github.com/fred78108/adgtk/wiki"
Issues = "https://github.com/fred78108/adgtk/issues"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = ["--import-mode=importlib", "--ignore=project_template"]

[tool.mypy]
pretty = true
check_untyped_defs = true


[[tool.mypy.overrides]]
module = ["toml", "yaml", "jinja2"]
ignore_missing_imports = true


[tool.tox]
requires = ["tox>=4.23.2"]
env_list = ["py312", "type", "lint"]

[tool.tox.env_run_base]
description = "Run tests under {base_python}"
deps = ["pytest", "httpx2"]
package = "wheel"
commands = [["pytest", "{posargs}"]]

[tool.tox.env.type]
description = "run type check on code base"
deps = ["mypy"]
commands = [
  [
    "mypy",
    "src",
    "--no-namespace-packages",
    "--ignore-missing-imports",
  ],
]

[tool.tox.env.lint]
description = "run linter on code base"
deps = ["flake8<7.0.0", "flake8-pyproject"]
commands = [["flake8", "src"]]

[project.scripts]
adgtk = "adgtk.cli.exp_cli:main"
adgtk-project = "adgtk.cli.project_cli:main"
adgtk-batch = "adgtk.cli.batch_cli:main"
adgtk-factory = "adgtk.cli.factory_cli:main"
adgtk-mgr = "adgtk.cli.cli:manager"
adgtk-ds = "adgtk.cli.ds_cli:main"
adgtk-results = "adgtk.cli.results_cli:main"
adgtk-study = "adgtk.cli.study_cli:main"
adgtk-mcp = "adgtk.mcp_server.server:main"
adgtk-web = "adgtk.api.server:main"


[tool.flake8]
per-file-ignores = [
  "**/__init__.py:F401",
  "**/test_*.py:E402,E501",
  "**/experiment/runner.py:E402",
  "**/factory/component.py:E402",
  "**/cli/ds_cli.py:E402",
  "**/cli/intro.py:E501",
  "**/tracking/project.py:E402",
]

[tool.setuptools.package-data]
adgtk = [
  "*.tar",
  "*.tar.gz",
  "skills/*.md",
  "api/templates/*.html",
  "api/templates/partials/*.html",
  "api/static/*",
]

# [tool.tox.env.docs]
# deps = [  "sphinx-autobuild","sphinx-build"]
# commands = [["sphinx-build -n -W --keep-going -b html docs/ docs/_build/"]]
